# Cold_Email

./: .gitignore  README.md  SETUP_GRAPH.md  SETUP_SMTP.md  app.py  config.example.env  database.py  email_backend.py  eml_sender.py  graph_sender.py  groq_generator.py  import_contacts.py  outlook_sender.py  playwright_sender.py  pyproject.toml  requirements.txt  run.bat  runtime.py  smtp_sender.py
templates/: index.html  tracking.html
