[project]
name = "cold-email"
version = "1.0.0"
description = "Personalized cold email sender with AI templates and contact tracking"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
    "groq>=0.9.0",
    "mysql-connector-python>=9.0.0",
    "pywin32>=306; sys_platform == 'win32'",
]

[tool.vercel]
entrypoint = "app:app"
